test/e2e/testdata/.snapshots/TestSetupFailureFlow/Invalid_Public_Key/GET_api_private_ipinfo_1.snaphost
HTTP/2.0 401 Unauthorized
Content-Length: 106
Content-Type: application/json
Date: Thu, 11 Sep 2025 05:08:48 GMT
Server: mdbws
Www-Authenticate: Digest realm="MMS Public API", domain="", nonce="gQzYqKZfWtke6yrC8h82CqP1wNEPZ52E", algorithm=MD5, qop="auth", stale=false
X-Xgen-Up-Proto: HTTP/2

{
  "error" : 401,
  "reason" : "Unauthorized",
  "detail" : "You are not authorized for this resource."
}